--- a/app/src/main/res/layout/fragment_warn_item.xml
+++ b/app/src/main/res/layout/fragment_warn_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="36dp"
+    android:gravity="center"
     android:orientation="horizontal">
 
 
@@ -18,7 +19,7 @@
         android:id="@+id/waring_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:gravity="center"
         android:text="植物名称" />
 
@@ -45,7 +46,7 @@
         android:id="@+id/waring_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="3"
         android:gravity="center"
         android:text="时间" />
 
