yanxu 阈值设置增加温度可输负数，判断最小值不得大于最大值。灌溉记录增加筛选功能

--- a/app/src/main/res/layout/fragment_valueset.xml
+++ b/app/src/main/res/layout/fragment_valueset.xml
@@ -61,7 +61,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:maxLines="1"
-            android:inputType="number"
+            android:inputType="numberSigned"
+
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:background="@drawable/edit_back"
