--- a/app/src/main/res/layout/fragment_water.xml
+++ b/app/src/main/res/layout/fragment_water.xml
@@ -24,9 +24,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:orientation="horizontal"
-        android:background="#bac4c9"
+        android:gravity="center"
+
         android:layout_marginTop="10dp"
         >
         <TextView
@@ -54,6 +55,10 @@
             />
 
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#FFB7DED5"/>
     <ListView
         android:id="@+id/lv_water"
         android:layout_width="match_parent"
