--- a/app/src/main/res/layout/recommend_shop_list_item.xml
+++ b/app/src/main/res/layout/recommend_shop_list_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dp">
@@ -15,7 +15,7 @@
 
     <TextView
         android:layout_centerVertical="true"
-        android:id="@+id/name"
+        android:id="@+id/tv_name"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -26,15 +26,10 @@
         android:layout_toRightOf="@+id/logo"
         android:textSize="@dimen/text_size_16" />
 
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_centerVertical="true"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_toRightOf="@id/name"/>
+
     <Button
         android:id="@+id/btnWatering"
-        android:layout_toRightOf="@id/checkBox"
+        android:layout_toRightOf="@id/tv_name"
         android:layout_centerVertical="true"
         android:layout_marginLeft="25dp"
         android:text="浇水"
