--- a/app/src/main/res/layout/fragment_konwledge.xml
+++ b/app/src/main/res/layout/fragment_konwledge.xml
@@ -4,5 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
+    <WebView
+        android:id="@+id/web_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></WebView>
 </LinearLayout>
