--- a/app/src/main/res/layout/fragment_plantadd.xml
+++ b/app/src/main/res/layout/fragment_plantadd.xml
@@ -3,12 +3,43 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
+        android:id="@+id/img_PlantImg"
         android:layout_width="150dp"
         android:layout_height="120dp"
         android:src="@drawable/default_image"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
+        >
+        <Button
+            android:id="@+id/btn_plantPhoto"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:text="相册"
+            android:background="@drawable/btn_photo"
+            android:layout_marginLeft="20dp"
+            android:textSize="13sp"
+            android:textColor="@color/white"
+            />
+        <Button
+            android:id="@+id/btn_plantTake"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:text="拍照"
+            android:background="@drawable/btn_photo"
+            android:textSize="13sp"
+            android:textColor="@color/white"
+            android:layout_marginLeft="10dp"
+            />
+
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
