--- a/app/src/main/res/layout/fragment_plantadd.xml
+++ b/app/src/main/res/layout/fragment_plantadd.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
     <ImageView
         android:id="@+id/img_PlantImg"
-        android:layout_width="150dp"
-        android:layout_height="120dp"
+        android:layout_width="160dp"
+        android:layout_height="130dp"
         android:src="@drawable/default_image"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
@@ -17,6 +17,7 @@
         android:gravity="center"
         android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
+        android:visibility="gone"
         >
         <Button
             android:id="@+id/btn_plantPhoto"
@@ -75,6 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="名        称"
+            android:textSize="20sp"
             android:layout_marginLeft="20dp"
             />
 
@@ -82,7 +84,7 @@
             android:id="@+id/et_plantName"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="30dp"
             android:background="@drawable/edit_back"
 
             android:maxLines="1"
@@ -101,12 +103,13 @@
             android:layout_height="wrap_content"
             android:text="生长阶段"
             android:layout_marginLeft="20dp"
+            android:textSize="20sp"
             />
         <Spinner
             android:id="@+id/spn_plantLive"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="30dp"
             android:entries="@array/plant_live"
             />
     </LinearLayout>
@@ -122,14 +125,16 @@
             android:layout_height="wrap_content"
             android:text="种植日期"
             android:layout_marginLeft="20dp"
+            android:textSize="20sp"
             />
         <TextView
             android:id="@+id/tv_plantDate"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="30dp"
             android:text="选择日期"
             android:gravity="center"
+            android:textSize="20sp"
             android:background="@drawable/edit_back"
             />
     </LinearLayout>
@@ -145,7 +150,8 @@
             android:layout_height="40dp"
             android:textColor="#fff"
             android:text="保存"
-            android:layout_marginLeft="115dp"
+            android:layout_marginLeft="130dp"
+            android:textSize="20sp"
             android:background="@drawable/btn_save_back"
             />
     </LinearLayout>
