--- a/app/src/main/res/layout/recommend_shop_list_item.xml
+++ b/app/src/main/res/layout/recommend_shop_list_item.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:scaleType="centerCrop"
         android:src="@drawable/default_image" />
 
@@ -18,6 +18,7 @@
         android:id="@+id/tv_name"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:layout_marginLeft="10dp"
         android:ellipsize="end"
         android:singleLine="true"
