kakee 植物实时数据

--- a/app/src/main/res/layout/activity_plants_status.xml
+++ b/app/src/main/res/layout/activity_plants_status.xml
@@ -4,8 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="person.jack.plant.activity.PlantsStatusActivity">
 
+    <include layout="@layout/layout_main_header" />
 
+
+
+    <android.support.v4.view.ViewPager
+        android:layout_weight="3"
+        android:id="@+id/status_pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></android.support.v4.view.ViewPager>
+
+
+    <RadioGroup
+        android:id="@+id/status_group"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RadioButton
+            android:id="@+id/status_r1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <RadioButton
+            android:id="@+id/status_r2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <RadioButton
+            android:id="@+id/status_r3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RadioGroup>
 
 </LinearLayout>
