--- a/app/src/main/res/layout/statistics_item_layout.xml
+++ b/app/src/main/res/layout/statistics_item_layout.xml
@@ -20,6 +20,7 @@
     </RelativeLayout>
 
     <TextView
+        android:gravity="center"
         android:layout_marginLeft="15dp"
         android:layout_gravity="center_vertical"
         android:id="@+id/item_temp"
@@ -27,21 +28,23 @@
         android:text="26"
         android:layout_weight="1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
     <TextView
+        android:gravity="center"
         android:layout_gravity="center_vertical"
         android:id="@+id/item_hum"
         android:textSize="20sp"
         android:text="26"
         android:layout_weight="1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
     <TextView
+        android:gravity="center"
         android:layout_gravity="center_vertical"
         android:id="@+id/item_lig"
         android:textSize="20sp"
         android:text="26"
         android:layout_weight="1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 </LinearLayout>
