--- a/app/src/main/res/drawable/edit_back.xml
+++ b/app/src/main/res/drawable/edit_back.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <solid android:color="#fff"/>
-    <stroke android:width="1dp"></stroke>
+    <stroke android:width="1dp" android:color="#008000"></stroke>
+    <corners android:radius="10dp"></corners>
 
 </shape>
