--- a/app/src/main/res/layout/fragment_plantadd.xml
+++ b/app/src/main/res/layout/fragment_plantadd.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/plantback"
+    android:gravity="center"
+    >
     <ImageView
         android:id="@+id/img_PlantImg"
         android:layout_width="160dp"
         android:layout_height="130dp"
         android:src="@drawable/default_image"
-        android:layout_gravity="center"
         android:layout_marginTop="30dp"
         />
 
@@ -35,34 +37,41 @@
             />
     </LinearLayout>
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:background="@drawable/linear_back"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
 
+
         >
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:text="名        称"
-            android:textSize="20sp"
-            android:layout_marginLeft="20dp"
+            android:textColor="#fff"
+            android:textSize="18sp"
+            android:layout_marginLeft="5dp"
             />
 
         <EditText
             android:id="@+id/et_plantName"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="30dp"
-            android:background="@drawable/edit_back"
-
+            android:background="@drawable/edit2_back"
+            android:textColor="#fff"
+            android:textSize="18sp"
             android:maxLines="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:paddingLeft="5dp"
 
             />
     </LinearLayout>
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:background="@drawable/linear_back"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
@@ -72,19 +81,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="生长阶段"
-            android:layout_marginLeft="20dp"
-            android:textSize="20sp"
+            android:layout_marginLeft="5dp"
+            android:textColor="#fff"
+            android:textSize="18sp"
             />
         <Spinner
             android:id="@+id/spn_plantLive"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            style="@style/spinner_style"
             android:entries="@array/plant_live"
+
             />
     </LinearLayout>
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:background="@drawable/linear_back"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
@@ -94,36 +108,45 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="种植日期"
-            android:layout_marginLeft="20dp"
-            android:textSize="20sp"
+
+            android:textColor="#fff"
+            android:textSize="18sp"
+            android:layout_marginLeft="5dp"
+
             />
         <TextView
             android:id="@+id/tv_plantDate"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="30dp"
+            android:paddingLeft="5dp"
+
             android:text="选择日期"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:background="@drawable/edit_back"
+            android:textColor="#fff"
+            android:textSize="18sp"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/edit2_back"
             />
     </LinearLayout>
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:background="@drawable/linear_back"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
+        android:gravity="center"
         >
         <Button
             android:id="@+id/btn_plantSave"
-            android:layout_width="200dp"
+            android:layout_width="300dp"
             android:layout_height="40dp"
             android:textColor="#fff"
             android:text="保存"
-            android:layout_marginLeft="130dp"
-            android:textSize="20sp"
-            android:background="@drawable/btn_save_back"
+            android:textSize="18sp"
+            android:background="@drawable/linear_back"
             />
+
     </LinearLayout>
 
 
