--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,12 @@
 		-->
 		<item name="android:windowNoTitle">true</item>
 	</style>
+	<style name="spinner_style">
+		<item name="android:background">@drawable/edit2_back</item>
+		<item name="android:paddingLeft">5dp</item>
+		<item name="android:textColor">#fff</item>
+		<item name="android:textSize">60sp</item>
+	</style>
 
 	<!-- Application theme. -->
 	<style name="AppTheme" parent="AppBaseTheme">
