--- a/app/src/main/res/layout/activity_plants_status.xml
+++ b/app/src/main/res/layout/activity_plants_status.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context="person.jack.plant.activity.PlantsStatusActivity">
 
     <include layout="@layout/layout_main_header" />
