--- a/app/src/main/res/layout/fragment_plantadd.xml
+++ b/app/src/main/res/layout/fragment_plantadd.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/plantback"
     android:gravity="center"
+
+
     >
     <ImageView
         android:id="@+id/img_PlantImg"
@@ -48,7 +49,8 @@
 
         <TextView
             android:layout_width="80dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:text="名        称"
             android:textColor="#fff"
             android:textSize="18sp"
@@ -65,6 +67,9 @@
             android:maxLines="1"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:singleLine="true"
             android:paddingLeft="5dp"
 
             />
@@ -79,7 +84,8 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:text="生长阶段"
             android:layout_marginLeft="5dp"
             android:textColor="#fff"
@@ -93,6 +99,8 @@
             android:layout_marginRight="10dp"
             style="@style/spinner_style"
             android:entries="@array/plant_live"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
 
             />
     </LinearLayout>
@@ -106,7 +114,8 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:text="种植日期"
 
             android:textColor="#fff"
@@ -126,12 +135,13 @@
             android:gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/edit2_back"
             />
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
-        android:background="@drawable/linear_back"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
